--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,126 @@ table {
 /******************************************
 /* LAYOUT
 /*******************************************/
+html{
+  font-size: 62.5%;
+}
+body{
+  color: white;
+  font-size: 2rem;
+  font-family: "Roboto", sans-serif; 
+}
+.flex{
+  display: flex;
+}
+a{
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
+.wrapper{
+  margin: 0 auto;
+  
+}
+
+nav{
+  padding: 30px;
+}
+ul{
+  width: 50%;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.main{
+  background:linear-gradient(rgba(44, 54, 94,.6) 50% ,rgba(44, 54, 94,.7) 100%), url(../img/main.jpg) 0 50%  no-repeat;
+  background-size: cover;
+}
+.navItem{
+
+}
+.navLink{
+  font-weight: 300;
+  font-size: 2.5rem;
+  text-shadow: 3px 3px 3px rgba(0,0,0,.8);
+
+}
+.navLink:hover{
+  text-shadow: 8px 8px 8px rgba(0,0,0,.4);
+}
+.grid-1{
+  text-align: center;
+  padding: 50px;
+  
+}
+h1{
+  font-size: 5.5rem;
+  text-shadow: 5px 5px 5px rgba(0,0,0,.6);
+  padding: 250px 20%;
+}
+
+.main p{
+  font-weight: 300;
+  font-size: 3rem;
+  text-shadow:5px 5px 5px rgba(0,0,0,.6);
+}
+
+.statGrid{
+  background: linear-gradient(#2B193D, rgba(72, 77, 109));
+  box-shadow:inset 0 -30px 10px rgba(0,0,0,.5), inset 0 30px 10px rgba(0,0,0,.5);
+  flex-wrap: wrap;
+  padding: 20px;
+  transition: 1.5s ease-out;
+}
+.statGrid:hover{
+  transition: 1.5s ease-in-out;
+  box-shadow: none;
+ 
+}
+.statGrid>section{
+  width: 33.3333%;
+  padding: 50px 0;
+  text-align: center;
+}
+.statGrid>section span{
+  display: block;
+  padding: 20px;
+  font-size: 6rem;
+  text-shadow: 8px 8px 5px rgba(0,0,0,.7);
+}
+.statGrid>section>span:last-of-type{
+  font-size: 3rem;
+}
+.grid-3{
+  flex-wrap: wrap;
+  justify-content: space-around;
+  text-align: center;
+  padding: 50px;
+  background:#4B8F8C;
+}
+.grid-3>section{
+  flex:1;
+  padding: 50px 70px;
+  text-align: center;
+  font-size: 3rem;
+  line-height: 4.5rem;
+  text-shadow: 4px 4px 4px rgba(0,0,0,.5);
+}
+.grid-3 section p{
+  margin: 40px 0;
+  line-height: 6rem;
+  padding: 0 40px;
+}
+
+h2{
+  font-weight: bold;
+  font-size: 4rem;
+  margin: 15px 0;
+  line-height: 7rem;
+}
+.grid-3-iframe{
+  width: 100%;
+  height: auto;
+  padding: 0 25px;
+}
 
 /******************************************
 /* ADDITIONAL STYLES
